--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2226,7 +2226,14 @@ div#header #logo {
 
 .center-widget .form-group .grid-20 {
 	font-size: 15px;
-	padding-top: 12px;
+	min-height: 45px;
+	line-height: 45px;
+}
+
+.center-widget .form-group .grid-20 {
+	font-size: 15px;
+	min-height: 45px;
+	line-height: 45px;
 }
 
 .right-sb .cat-status li:after {
