--- a/app/views/form.html
+++ b/app/views/form.html
@@ -1,5 +1,13 @@
 <div *ngIf=showDialog>
 	<h2 class="heading" *ngIf=title>{{title}}</h2>
+	<div *ngIf="showManageUsers">
+		<div class="grid-20 mobile-grid-100 grid-parent">Manage Users:</div>
+		<div class="grid-80 mobile-grid-100 grid-parent">
+			<a class="btn btn-block btn-sm btn-blue" [routerLink]="['/mSubUsers', data.id]">Click Here</a>
+
+		</div>
+		<div class="clearfix br"></div>
+	</div>
 	<form #f="ngForm">
 		<div class="form-group">
 			<template ngFor let-fld [ngForOf]="fields">
@@ -7,7 +15,7 @@
 					<div class="grid-20 mobile-grid-100 grid-parent">
 						{{fld.title}}<span *ngIf=fld.req class="error" title="required"> *</span>
 					</div>
-					<div class="grid-80 mobile-grid-100 grid-parent" style="margin-top:13px;">
+					<div class="grid-80 mobile-grid-100 grid-parent">
 						<div *ngIf="fld.image">
 							<span class="result rounded" *ngIf="!cropData.image && getValue(fld)">
 								<img [src]="getValue(fld)" style="max-width: 500px; border-radius: 100px;" height="200px">
@@ -18,7 +26,7 @@
 								<img [src]="cropData.image" style="max-width: 500px; border-radius: 100px;" height="200px">
 								<br>
 							</span>
-							<a href="javascript:" class="btn btn-xs btn-green1" (click)="imgDlg.show(fld)">Select</a>
+							<button class="btn btn-xs btn-green1" (click)="imgDlg.show(fld)" style="margin-top: 10px">Select</button>
 							<modal title="Select A Featured Image" width="300px" [buttons]=imgButtons #imgDlg>
 								<div>
 									<input id="custom-input" type="file" (change)="loadImage($event)">
@@ -29,15 +37,12 @@
 							</modal>
 						</div>
 
-						<textarea #input *ngIf="fld.textarea" class="form-control" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}"
-							(blur)="updateValue(input)" (focus)="setAttrs(input)">{{binders[fld.name].value}}</textarea>
+						<textarea #input *ngIf="fld.textarea" class="form-control" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}" (blur)="updateValue(input)" (focus)="setAttrs(input)">{{binders[fld.name].value}}</textarea>
 
-						<input #input *ngIf="fld.input" class="form-control" type="{{fld.input}}" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}"
-							[value]="getValue(input)" (change)="updateValue(input)" (focus)="setAttrs(input)" title="{{fld.placeholder || fld.title}}">
+						<input #input *ngIf="fld.input" class="form-control" type="{{fld.input}}" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}" [value]="getValue(input)" (change)="updateValue(input)" (focus)="setAttrs(input)" title="{{fld.placeholder || fld.title}}">
 
-						<div class="onoffswitch status" data-for="toggle-status" *ngIf="fld.toggle">
-							<input #input type="checkbox" name="status" class="onoffswitch-checkbox" name="{{fld.name}}"
-								[checked]="getValue(input)" (focus)="setAttrs(input)" title="{{fld.placeholder || fld.title}}">
+						<div class="onoffswitch status" data-for="toggle-status" *ngIf="fld.toggle" style="margin-top: 5px">
+							<input #input type="checkbox" name="status" class="onoffswitch-checkbox" name="{{fld.name}}" [checked]="getValue(input)" (focus)="setAttrs(input)" title="{{fld.placeholder || fld.title}}">
 							<label class="onoffswitch-label" [attr.for]="fld.name" (click)="setCheckbox(input)">
 								<span class="onoffswitch-inner"></span>
 								<span class="onoffswitch-switch"></span>
@@ -45,15 +50,14 @@
 						</div>
 
 						<div class="checkbox" *ngIf="fld.checkbox">
-							<input #input class="form-control" type="checkbox" name="{{fld.name}}"
-								[checked]="getValue(input)" (focus)="setAttrs(input)" title="{{fld.placeholder || fld.title}}">
+							<input #input class="form-control" type="checkbox" name="{{fld.name}}" [checked]="getValue(input)" (focus)="setAttrs(input)" title="{{fld.placeholder || fld.title}}">
 							<label [attr.for]="fld.name" (click)="setCheckbox($event.target)">{{fld.placeholder || fld.title}}</label>
 						</div>
 
 						<span style="display: block" *ngIf="binders[fld.name].touched && binders[fld.name].error"><span class="error">*</span> {{binders[fld.name].error}}</span>
 					</div>
+					<div class="clearfix br"></div>
 				</div>
-				<div class="clearfix br"></div>
 			</template>
 			<div class="clearfix br"></div>
 			<div class="grid-50 mobile-grid-40 grid-parent">
@@ -65,3 +69,4 @@
 		</div>
 	</form>
 </div>
+
