--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -5,7 +5,7 @@
 			<img [src]="user.imageUrl || '/static/img/user.png'" class="avatar" style="width: 60%; border-radius: 100%; margin-bottom: 10px;">
 		</a>
 		<label>{{ user.name }}</label>
-		<small>({{ user.subUser || user.email }})</small>
+		<small>({{ email }})</small>
 	</div>
 	<div class="user-account-options" *ngIf="user.admin">
 		<ul>
