create campaign checks for subscription plan

--- a/app/views/mBilling.html
+++ b/app/views/mBilling.html
@@ -67,7 +67,7 @@
 					<option value="yes">Month</option>
 					<option value="no">Year</option>
 				</select>
-				<button class="btn btn-block btn-sm btn-green1" (click)="setPlan(3, price.value, plan.value)" [disabled]="loading || price.value < 500"><span class="fui-plus-circle"></span> Set Enterprise Plan</button>
+				<button class="btn btn-block btn-sm btn-green1" (click)="setPlan(3, price.value, plan.value)" [disabled]="loading"><span class="fui-plus-circle"></span> Set Enterprise Plan</button>
 			</div>
 			<div align="middle">Need even more power? <a href="#">Get in touch</a> with us to discuss our enterprise options.
 				<br>
