--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -1,5 +1,12 @@
-<div class="grid-62 mobile-grid-100 grid-parent" three-column>
+<div class="grid-62 mobile-grid-100 grid-parent campaignPage" three-column>
 	<div class="content-holder center-widget">
+		<div *ngIf="plan === 0">
+			<div class="notification warning"><strong>
+			You are still on demo status. To upgrade to be able to create campaigns: <a [routerLink]="['/mBilling', user.id]">Click here</a>
+			</strong></div>
+			<div class="clearfix br"></div>
+			<div class="clearfix br"></div>
+		</div>
 		<form #f="ngForm" novalidate (ngSubmit)="save()">
 			<div class="grid-100 grid-parent">
 				<h2 class="heading">1. Basic campaign settings
@@ -80,18 +87,19 @@
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
 						<div class="checkbox">
-							<input id="instagram" name="instagram" type="checkbox" [(ngModel)]="data.instagram" (change)="updateSidebar('network')" [disabled]=opts.isEdit>
+							<input id="instagram" name="instagram" type="checkbox" [(ngModel)]="data.instagram" (change)="updateSidebar('network')" [disabled]="opts.isEdit">
 							<label for="instagram">Instagram</label>
 
-							<input id="twitter" name="twitter" type="checkbox" [(ngModel)]="data.twitter" (change)="updateSidebar('network')" [disabled]=opts.isEdit>
+							<input id="twitter" name="twitter" type="checkbox" [(ngModel)]="data.twitter" (change)="updateSidebar('network')" [disabled]="opts.isEdit || plan < 2">
 							<label for="twitter">Twitter</label>
 
-							<input id="youtube" name="youtube" type="checkbox" [(ngModel)]="data.youtube" (change)="updateSidebar('network')" [disabled]=opts.isEdit>
+							<input id="youtube" name="youtube" type="checkbox" [(ngModel)]="data.youtube" (change)="updateSidebar('network')" [disabled]="opts.isEdit || plan < 2">
 							<label for="youtube">YouTube</label>
 
-							<input id="facebook" name="facebook" type="checkbox" [(ngModel)]="data.facebook" (change)="updateSidebar('network')" [disabled]=opts.isEdit>
+							<input id="facebook" name="facebook" type="checkbox" [(ngModel)]="data.facebook" (change)="updateSidebar('network')" [disabled]="opts.isEdit || plan < 2">
 							<label for="facebook">Facebook</label>
 						</div>
+						<div class="subWarning" *ngIf="plan < 2">* To be able to select the other networks, upgrade to <a [routerLink]="['/mBilling', user.id]">Premium</a></div>
 					</div>
 				</div>
 				<div class="form-group">
@@ -170,6 +178,8 @@
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
 						<select multiple="multiple" class="geo form-control multiselect multiselect-info"></select>
+						<div class="subWarning" *ngIf="plan < 2">* To be able select Canada and Europe, upgrade to <a [routerLink]="['/mBilling', user.id]">Premium</a></div>
+						<div class="subWarning" *ngIf="plan == 2">* To be able select all countires, upgrade to <a [routerLink]="['/mBilling', user.id]">Enterprise</a></div>
 					</div>
 				</div>
 				<div class="form-group">
@@ -257,9 +267,11 @@
 						<div class="grid-100 mobile-grid-100 grid-parent" style="padding-right:30px;">
 							<div class="btn-toolbar toolbar-horizontal">
 								<div class="btn-group">
-									<a style="min-height: 20px;" class="view-primary" [class.active]="data.perks.type === 1" (click)="resetPerks(1)"><span class="fui-txt">Ship Physical Product</span></a>
+									<a style="min-height: 20px;" class="view-primary" [class.active]="data.perks.type === 1" (click)="resetPerks(1)" *ngIf="plan > 1"><span class="fui-txt">Ship Physical Product</span></a>
 									<a style="min-height: 20px;" class="view-primary" [class.active]="data.perks.type === 2" (click)="resetPerks(2)"><span class="fui-txt">Give Coupons</span></a>
 								</div>
+								<div class="clearfix br"></div>
+								<div class="subWarning" *ngIf="plan < 2">* To be able to ship Physical Goods, upgrade to <a [routerLink]="['/mBilling', user.id]">Premium</a></div>
 							</div>
 						</div>
 						<br>
@@ -319,7 +331,7 @@
 				<a href="javascript:history.back()" class="btn btn-block btn-lg btn-blue ghost">Back</a>
 			</div>
 			<div class="grid-50 mobile-grid-60 grid-parent align-right">
-				<button type="submit" class="btn btn-block btn-lg btn-green1" [disabled]="!f.valid || loading">Save &amp; Launch &#187;</button>
+				<button type="submit" class="btn btn-block btn-lg btn-green1" [disabled]="plan === 0 || !f.valid || loading">Save &amp; Launch &#187;</button>
 			</div>
 		</form>
 		<br>
