--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2981,3 +2981,11 @@ input[type="file"] {
 	font-size: 150%;
 	width: 6.5%;
 }
+
+.subWarning {
+	color: #d2335c;
+}
+
+.campaignPage input[disabled]+label {
+	color: #d2335c;
+}
