--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -15,7 +15,7 @@
 			<li><a [routerLink]="['/mCampaignPerks']" [routerLinkActive]="['is-active']">Inbound</a></li>
 			<li><a [routerLink]="['/mOutboundPerks']" [routerLinkActive]="['is-active']">Perks To Ship</a></li>
 			<li><a [routerLink]="['/checkPayouts']" [routerLinkActive]="['is-active']">Check Payouts</a></li>
-			<li><a [routerLink]="['/assignGame']" [routerLinkActive]="['is-active']">Assign Game [<span [innerHTML]=assignGameNum></span>]</a></li>
+			<li><a [routerLink]="['/assignGame']" [routerLinkActive]="['is-active']">Assign Game [<span [innerHTML]="assignGameNum"></span>]</a></li>
 		</ul>
 	</div>
 	<div class="user-account-options" *ngIf="user.adAgency">
