spelling is overrated

--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -172,7 +172,7 @@
 					<div class="grid-80 mobile-grid-100 grid-parent">
 						<select multiple="multiple" class="geo form-control multiselect multiselect-info"></select>
 						<div class="subWarning" *ngIf="plan < 2">* To be able select Canada and Europe, upgrade to <a [routerLink]="['/mBilling', user.id]">Premium</a></div>
-						<div class="subWarning" *ngIf="plan == 2">* To be able select all countires, upgrade to <a [routerLink]="['/mBilling', user.id]">Enterprise</a></div>
+						<div class="subWarning" *ngIf="plan == 2">* To be able select all countries, upgrade to <a [routerLink]="['/mBilling', user.id]">Enterprise</a></div>
 					</div>
 				</div>
 				<div class="form-group">
