background color for no campaigns

--- a/app/views/reporting.html
+++ b/app/views/reporting.html
@@ -28,7 +28,7 @@
 </div>
 <div *ngIf="!!timelines && timelines.length === 0">
 	<div class="pallete-item" style="width: 80%;">
-		<dl class="palette" style="color:#bdc3c7">
+		<dl class="palette" style="background-color: #bdc3c7">
 			<dt>You have no campaigns yet!</dt>
 		</dl>
 
