--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -67,6 +67,14 @@
 				</div>
 				<div class="form-group">
 					<div class="grid-20 mobile-grid-100 grid-parent">
+						<span class="ttip" title="What is the minimum number of influencers you want this budget to distribute to?">Outreach Goal: <img src="/static/img/questionTooltip.png" /></span>
+					</div>
+					<div class="grid-80 mobile-grid-100 grid-parent">
+						<input type="number" name="infGoal" class="form-control" [(ngModel)]="data.infGoal" required>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="grid-20 mobile-grid-100 grid-parent">
 						Task To Perform:
 						<br><a style="font-size:12px;" href="#">[Video Advice]</a>
 					</div>
