--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -65,12 +65,12 @@
 						<input type="number" min="150" name="budget" placeholder="$150 minimum recommended" class="form-control" [(ngModel)]="data.budget" required (change)="updateSidebar('budget')">
 					</div>
 				</div>
-				<div class="form-group">
-					<div class="grid-20 mobile-grid-100 grid-parent">
+				<div class="form-group" *ngIf="!data.whitelist && (!data.perks || data.perks.count === 0)">
+					<div class=" grid-20 mobile-grid-100 grid-parent">
 						<span class="ttip" title="What is the minimum number of influencers you want this budget to distribute to?">Outreach Goal: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
-						<input type="number" name="infGoal" class="form-control" [(ngModel)]="data.infGoal" required>
+						<input type="number" name="infGoal" class="form-control" [(ngModel)]="data.infGoal" required [disabled]="opts.isEdit">
 					</div>
 				</div>
 				<div class="form-group">
