--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -67,10 +67,10 @@
 				</div>
 				<div class="form-group" *ngIf="!data.whitelist && (!data.perks || data.perks.count === 0)">
 					<div class=" grid-20 mobile-grid-100 grid-parent">
-						<span class="ttip" title="We will attempt to endorse influencers near this price">Price per influencer goal: <img src="/static/img/questionTooltip.png" /></span>
+						<span class="ttip" title="We will attempt to endorse influencers near this price (NOTE: If you are to assign a whitelist or a perk to this campaign, this value is ignored)">Price Per Inf: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
-						<input type="number" name="infGoal" class="form-control" [(ngModel)]="data.infGoal" step="0.01" required [disabled]="opts.isEdit">
+						<input type="number" name="infGoal" class="form-control" [(ngModel)]="data.infGoal" step="0.00001" required [disabled]="opts.isEdit">
 					</div>
 				</div>
 				<div class="form-group">
