--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -6,50 +6,62 @@
 </form>
 
 <div class="clearfix br"></div>
-<br><br><br>
-
-<div class="row tile mCampaign">
+<div class="row tile mCampaign" *ngFor="let cmp of list | filter:FilterUsers">
 	<div class="grid-10 mobile-grid-100" align="left">
-		<img style="border-radius: 10px; padding-top: 5px;" height="70" src="test.png">
+		<img style="border-radius: 10px; padding-top: 5px;" height="70" [src]="cmp.image">
 	</div>
 
 	<div class="grid-30 mobile-grid-100" align="left" style="padding-left: 25px;">
-		
+
 		<h6 style="margin-bottom: 8px;">{{cmp.name}} - <span class="label label-success">{{cmp.status ? 'On' : 'Off'}}</span></h6>
-		<p class="img-comment" style="font-size: 12px;">Created: {{cmp.createdAt * 1000 | date}} | Support ID: {{cmp.id}}</p>
+		<p class="img-comment" style="font-size: 12px;">Created: {{cmp.created * 1000 | date}} | Support ID: {{cmp.id}}</p>
 		<p class="img-comment" style="font-size: 12px;">Networks:
-			<i title="Instagram" class="fui-instagram" *ngIf=cmp.instagram></i> 
-			<i title="Twitter" class="fui-twitter" *ngIf=cmp.twitter></i> 
-			<i title="Facebook" class="fui-facebook" *ngIf=cmp.facebook></i> 
+			<i title="Instagram" class="fui-instagram" *ngIf=cmp.instagram></i>
+			<i title="Twitter" class="fui-twitter" *ngIf=cmp.twitter></i>
+			<i title="Facebook" class="fui-facebook" *ngIf=cmp.facebook></i>
 			<i title="YouTube" class="fui-youtube" *ngIf=cmp.youtube></i>
 		</p>
 
 	</div>
 
 	<div class="grid-60 mobile-grid-100" align="right" style="padding-top: 15px;">
-		<button (click)="selDate.show(cmp);" class="btn btn-green1 btn-micro ghost">Download Report</button> | <button [routerLink]="['/editCampaign', cmp.advertiserId, cmp.id]" class="btn btn-info btn-micro ghost">Edit</button> | <a class="btn btn-scarlet btn-micro ghost">Delete</a>
+		<button (click)="selDate.show(cmp);" class="btn btn-green1 btn-micro ghost">Download Report</button> |
+		<a [routerLink]="['/editCampaign', user.id, cmp.id]"
+			class="btn btn-info btn-micro ghost">Edit</a> | <a class="btn btn-scarlet btn-micro ghost">Delete</a>
 	</div>
 	<div class="clearfix"></div>
-
 
 	<!--Milestones-->
 	<div class="grid-100 mobile-grid-100" align="left" style="padding-top: 15px;">
 		<h6>Latest campaign update:</h6>
 		<!--Milestone alert goes here-->
-		<p>Milestone goes here</p>
-		
+		<div class="pallete-item" style="width: 80%;" *ngIf="cmp.timeline">
+			<dl class="palette" [style.backgroundColor]="cmp.timeline.color">
+				<dd [innerHTML]="cmp.timeline.msg"></dd>
+			</dl>
 
+		</div>
+		<div class="pallete-item" style="width: 20%;" *ngIf="cmp.timeline">
+			<dl class="palette palette-clouds">
+				<dd>
+					<a style="font-size: 12px;" [routerLink]="[cmp.timeline.link]" *ngIf="!!cmp.timeline.link && cmp.timeline.link.substr(0, 4) !== 'http'" [innerHTML]="cmp.timeline.linkTitle"></a>
+					<a style="font-size: 12px;" [href]="cmp.timeline.link" target="_blank" *ngIf="!!cmp.timeline.link && cmp.timeline.link.substr(0, 4) === 'http'" [innerHTML]="cmp.timeline.linkTitle"></a>
+					<a style="font-size: 12px;" href="javascript:Intercom('show')" title="Live Chat with a Sway expert" *ngIf="!cmp.timeline.link">Contact Us!</a>
+					<br>
+					<span style="font-weight: 300; font-size: 11px; color: #000;">{{cmp.timeline.ts | date:'HH:mm | MMM d, y'}}</span>
+				</dd>
+			</dl>
+		</div>
 	</div>
 	<div class="clearfix"></div>
-
 
 	<!--budget progress-->
 	<div class="grid-100 mobile-grid-100" align="left" style="padding-top: 15px;">
 		<h6>Monthly budget:</h6>
 		<div class="progress">
-		  <div class="progress-bar progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-		    <span class="sr-only">40%</span>
-		  </div>
+			<div class="progress-bar progress-bar" role="progressbar" [attr.aria-valuenow]="budgetPercent(cmp, false)" aria-valuemin="0" aria-valuemax="100" [style.width]="budgetPercent(cmp)">
+				<span class="sr-only" [innerHTML]="budgetPercent(cmp)">40%</span>
+			</div>
 		</div>
 		<span class="label" style="background-color: #34495e;">Spent of monthly</span> | <span class="label label-success">Total remaining budget</span>
 
@@ -59,93 +71,90 @@
 	<br>
 	<!--Stat tiles-->
 	<div class="grid-100 mobile-grid-100" align="left">
-		
+
 		<div class="pallete-item" style="margin-left: 0px;">
-	      	<dl class="palette palette-wet-asphalt">
-	  			<dt>Engagements</dt>
-	 			<dd>{{cmp.engagements}}</dd>
+			<dl class="palette palette-wet-asphalt">
+				<dt>Engagements</dt>
+				<dd>{{cmpStats(cmp, 'engagements') | fmtNum }}</dd>
 			</dl>
 			<dl class="palette palette-midnight-blue">
-	 			<dt>Est Views</dt>
-	  			<dd>{{cmp.estViews}}</dd>
+				<dt>Est Views</dt>
+				<dd>{{cmpStats(cmp, 'estViews') | fmtNum }}</dd>
 			</dl>
-	  	</div>
+		</div>
 		<div class="pallete-item">
-	      	<dl class="palette palette-wet-asphalt">
-	  			<dt>Likes</dt>
-	 			<dd>{{cmp.likes}}</dd>
+			<dl class="palette palette-wet-asphalt">
+				<dt>Likes</dt>
+				<dd>{{cmpStats(cmp, 'likes') | fmtNum }}</dd>
 			</dl>
 			<dl class="palette palette-midnight-blue">
-	 			<dt>Link Clicks</dt>
-	  			<dd>{{cmp.clicks}}</dd>
+				<dt>Link Clicks</dt>
+				<dd>{{cmpStats(cmp, 'clicks') | fmtNum }}</dd>
 			</dl>
-	  	</div>
-	  	<div class="pallete-item">
-	      	<dl class="palette palette-wet-asphalt">
-	  			<dt>Comments</dt>
-	 			<dd>{{cmp.comments}}</dd>
-			</dl>
-			<dl class="palette palette-midnight-blue">
-	 			<dt>Shares</dt>
-	  			<dd>{{cmp.shares}}</dd>
-			</dl>
-	  	</div>
+		</div>
 		<div class="pallete-item">
-	      	<dl class="palette palette-wet-asphalt">
-	  			<dt>Sent Perks</dt>
-	 			<dd>{{cmp.sentPerks}}</dd>
+			<dl class="palette palette-wet-asphalt">
+				<dt>Comments</dt>
+				<dd>{{cmpStats(cmp, 'comments') | fmtNum }}</dd>
 			</dl>
 			<dl class="palette palette-midnight-blue">
-	 			<dt># Influencers</dt>
-	  			<dd>{{cmp.infUsed}}</dd>
+				<dt>Shares</dt>
+				<dd>{{cmpStats(cmp, 'shares') | fmtNum }}</dd>
 			</dl>
-	  	</div>
-	  	<div class="pallete-item">
-	      	<dl class="palette palette-wet-asphalt">
-	  			<dt>Spent</dt>
-	 			<dd>${{cmp.spent?.toFixed(0)}}</dd>
+		</div>
+		<div class="pallete-item">
+			<dl class="palette palette-wet-asphalt">
+				<dt>Sent Perks</dt>
+				<dd>{{cmpStats(cmp, 'sentPerks') | fmtNum }}</dd>
 			</dl>
 			<dl class="palette palette-midnight-blue">
-	  			<dt>Monthly budget</dt>
-	 			<dd>${{cmp.budget?.toFixed(0)}}</dd>
+				<dt># Influencers</dt>
+				<dd>{{cmpStats(cmp, 'infUsed') | fmtNum }}</dd>
 			</dl>
-	  	</div>
+		</div>
+		<div class="pallete-item">
+			<dl class="palette palette-wet-asphalt">
+				<dt>Spent</dt>
+				<dd>${{cmpStats(cmp, 'spent').toFixed(2)}}</dd>
+			</dl>
+			<dl class="palette palette-midnight-blue">
+				<dt>Monthly budget</dt>
+				<dd>${{cmp.budget?.toFixed(0)}}</dd>
+			</dl>
+		</div>
 
 	</div>
 	<div class="clearfix"></div>
 
-
 	<!--2 rows of influencers-->
 	<div class="grid-50 mobile-grid-100" align="left">
-		<h6 style="margin-bottom: 8px;">Accepted/ Endorsed Influencers:</h6>
+		<h6 style="margin-bottom: 8px;">Accepted / Endorsed Influencers:</h6>
 		<div class="infColumn">
-			
-			<p style="font-size: 12px;">
-				<img height="15" src="https://scontent.cdninstagram.com/t51.2885-19/s150x150/12725099_1753906118162422_141247477_a.jpg"> <a>Goldie Walberg</a> | Followers: 23k
-			</p>
-			
+			<div style="font-size: 12px;" *ngFor="let inf of cmp.accepted">
+				<img height="15" [src]="inf.image"><a [href]="inf.profileUrl" target="_blank">{{inf.name}}</a> | Followers: {{inf.followers | fmtNum}}
+			</div>
 		</div>
 		<hr>
 		<a class="btn btn-info btn-micro">View All...</a>
 	</div>
 
-
 	<div class="grid-50 mobile-grid-100" align="left">
 		<h6 style="margin-bottom: 8px;">Delivered content:</h6>
 		<div class="infColumn">
-			
-			<p style="font-size: 12px;">
-				<img height="15" src="https://scontent.cdninstagram.com/t51.2885-19/s150x150/12725099_1753906118162422_141247477_a.jpg"> <a>Goldie Walberg</a> | Engagements: 23k | <a style="font-size: 12px;">View Post</a>
-			</p>
-			
-		</div><!--inf column end-->
+			<div style="font-size: 12px;" *ngFor="let inf of cmp.completed">
+				<img height="15" [src]="inf.image"><a [href]="inf.profileUrl" target="_blank">{{inf.name}}</a> |
+				 Engagements: {{inf.engagements | fmtNum}} |
+				 <a style="font-size: 12px;" [href]="inf.postUrl" target="_blank">View Post</a>
+			</div>
+		</div>
+		<!--inf column end-->
 		<hr>
 		<a class="btn btn-info btn-micro">View All...</a>
 	</div>
 	<div class="clearfix"></div>
 
-</div><!--end row tile-->
-
+</div>
+<!--end row tile-->
 
 <modal title="Select a date range for this report" #selDate [buttons]=selDateButtons>
 	<form class="form-inline">
