--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -26,8 +26,7 @@
 
 	<div class="grid-60 mobile-grid-100" align="right" style="padding-top: 15px;">
 		<button (click)="selDate.show(cmp);" class="btn btn-green1 btn-micro ghost">Download Report</button> |
-		<a [routerLink]="['/editCampaign', user.id, cmp.id]"
-			class="btn btn-info btn-micro ghost">Edit</a> | <a class="btn btn-scarlet btn-micro ghost">Delete</a>
+		<a [routerLink]="['/editCampaign', user.id, cmp.id]" class="btn btn-info btn-micro ghost">Edit</a> | <a class="btn btn-scarlet btn-micro ghost">Delete</a>
 	</div>
 	<div class="clearfix"></div>
 
@@ -44,11 +43,13 @@
 		<div class="pallete-item" style="width: 20%;" *ngIf="cmp.timeline">
 			<dl class="palette palette-clouds">
 				<dd>
-					<a style="font-size: 12px;" [routerLink]="[cmp.timeline.link]" *ngIf="!!cmp.timeline.link && cmp.timeline.link.substr(0, 4) !== 'http'" [innerHTML]="cmp.timeline.linkTitle"></a>
-					<a style="font-size: 12px;" [href]="cmp.timeline.link" target="_blank" *ngIf="!!cmp.timeline.link && cmp.timeline.link.substr(0, 4) === 'http'" [innerHTML]="cmp.timeline.linkTitle"></a>
-					<a style="font-size: 12px;" href="javascript:Intercom('show')" title="Live Chat with a Sway expert" *ngIf="!cmp.timeline.link">Contact Us!</a>
-					<br>
-					<span style="font-weight: 300; font-size: 11px; color: #000;">{{cmp.timeline.ts | date:'HH:mm | MMM d, y'}}</span>
+					<a style="font-size: 12px;" [routerLink]="[cmp.timeline.link]" *ngIf="!!cmp.timeline.link && cmp.timeline.link.substr(0, 4) !== 'http'"
+						[innerHTML]="cmp.timeline.linkTitle"></a>
+						<a style="font-size: 12px;" [href]="cmp.timeline.link" target="_blank" *ngIf="!!cmp.timeline.link && cmp.timeline.link.substr(0, 4) === 'http'"
+							[innerHTML]="cmp.timeline.linkTitle"></a>
+							<a style="font-size: 12px;" href="javascript:Intercom('show')" title="Live Chat with a Sway expert" *ngIf="!cmp.timeline.link">Contact Us!</a>
+							<br>
+							<span style="font-weight: 300; font-size: 11px; color: #000;">{{cmp.timeline.ts | date:'HH:mm | MMM d, y'}}</span>
 				</dd>
 			</dl>
 		</div>
@@ -59,99 +60,101 @@
 	<div class="grid-100 mobile-grid-100" align="left" style="padding-top: 15px;">
 		<h6>Monthly budget:</h6>
 		<div class="progress">
-			<div class="progress-bar progress-bar" role="progressbar" [attr.aria-valuenow]="budgetPercent(cmp, false)" aria-valuemin="0" aria-valuemax="100" [style.width]="budgetPercent(cmp)">
+			<div class="progress-bar progress-bar" role="progressbar" [attr.aria-valuenow]="budgetPercent(cmp, false)" aria-valuemin="0"
+				aria-valuemax="100" [style.width]="budgetPercent(cmp)">
 				<span class="sr-only" [innerHTML]="budgetPercent(cmp)">40%</span>
-			</div>
 		</div>
-		<span class="label" style="background-color: #34495e;">Spent of monthly</span> | <span class="label label-success">Total remaining budget</span>
-
 	</div>
-	<div class="clearfix"></div>
+	<span class="label" style="background-color: #34495e;">Spent of monthly</span> | <span class="label label-success">Total remaining budget</span>
 
-	<br>
-	<!--Stat tiles-->
-	<div class="grid-100 mobile-grid-100" align="left">
+</div>
+<div class="clearfix"></div>
 
-		<div class="pallete-item" style="margin-left: 0px;">
-			<dl class="palette palette-wet-asphalt">
-				<dt>Engagements</dt>
-				<dd>{{cmpStats(cmp, 'engagements') | fmtNum }}</dd>
-			</dl>
-			<dl class="palette palette-midnight-blue">
-				<dt>Est Views</dt>
-				<dd>{{cmpStats(cmp, 'estViews') | fmtNum }}</dd>
-			</dl>
-		</div>
-		<div class="pallete-item">
-			<dl class="palette palette-wet-asphalt">
-				<dt>Likes</dt>
-				<dd>{{cmpStats(cmp, 'likes') | fmtNum }}</dd>
-			</dl>
-			<dl class="palette palette-midnight-blue">
-				<dt>Link Clicks</dt>
-				<dd>{{cmpStats(cmp, 'clicks') | fmtNum }}</dd>
-			</dl>
-		</div>
-		<div class="pallete-item">
-			<dl class="palette palette-wet-asphalt">
-				<dt>Comments</dt>
-				<dd>{{cmpStats(cmp, 'comments') | fmtNum }}</dd>
-			</dl>
-			<dl class="palette palette-midnight-blue">
-				<dt>Shares</dt>
-				<dd>{{cmpStats(cmp, 'shares') | fmtNum }}</dd>
-			</dl>
-		</div>
-		<div class="pallete-item">
-			<dl class="palette palette-wet-asphalt">
-				<dt>Sent Perks</dt>
-				<dd>{{cmpStats(cmp, 'sentPerks') | fmtNum }}</dd>
-			</dl>
-			<dl class="palette palette-midnight-blue">
-				<dt># Influencers</dt>
-				<dd>{{cmpStats(cmp, 'infUsed') | fmtNum }}</dd>
-			</dl>
-		</div>
-		<div class="pallete-item">
-			<dl class="palette palette-wet-asphalt">
-				<dt>Spent</dt>
-				<dd>${{cmpStats(cmp, 'spent').toFixed(2)}}</dd>
-			</dl>
-			<dl class="palette palette-midnight-blue">
-				<dt>Monthly budget</dt>
-				<dd>${{cmp.budget?.toFixed(0)}}</dd>
-			</dl>
-		</div>
+<br>
+<!--Stat tiles-->
+<div class="grid-100 mobile-grid-100 stats" align="left">
 
+	<div class="pallete-item">
+		<dl class="palette palette-wet-asphalt">
+			<dt>Engagements</dt>
+			<dd>{{cmpStats(cmp, 'engagements') | fmtNum }}</dd>
+		</dl>
+		<dl class="palette palette-midnight-blue">
+			<dt>Est Views</dt>
+			<dd>{{cmpStats(cmp, 'views') | fmtNum }}</dd>
+		</dl>
 	</div>
-	<div class="clearfix"></div>
-
-	<!--2 rows of influencers-->
-	<div class="grid-50 mobile-grid-100" align="left">
-		<h6 style="margin-bottom: 8px;">Accepted / Endorsed Influencers:</h6>
-		<div class="infColumn">
-			<div style="font-size: 12px;" *ngFor="let inf of cmp.accepted">
-				<img height="15" [src]="inf.image"><a [href]="inf.profileUrl" target="_blank">{{inf.name}}</a> | Followers: {{inf.followers | fmtNum}}
-			</div>
-		</div>
-		<hr>
-		<a class="btn btn-info btn-micro">View All...</a>
+	<div class="pallete-item">
+		<dl class="palette palette-wet-asphalt">
+			<dt>Likes</dt>
+			<dd>{{cmpStats(cmp, 'likes') | fmtNum }}</dd>
+		</dl>
+		<dl class="palette palette-midnight-blue">
+			<dt>Link Clicks</dt>
+			<dd>{{cmpStats(cmp, 'clicks') | fmtNum }}</dd>
+		</dl>
+	</div>
+	<div class="pallete-item">
+		<dl class="palette palette-wet-asphalt">
+			<dt>Comments</dt>
+			<dd>{{cmpStats(cmp, 'comments') | fmtNum }}</dd>
+		</dl>
+		<dl class="palette palette-midnight-blue">
+			<dt>Shares</dt>
+			<dd>{{cmpStats(cmp, 'shares') | fmtNum }}</dd>
+		</dl>
+	</div>
+	<div class="pallete-item">
+		<dl class="palette palette-wet-asphalt">
+			<dt>Sent Perks</dt>
+			<dd>{{cmpStats(cmp, 'perks') | fmtNum }}</dd>
+		</dl>
+		<dl class="palette palette-midnight-blue">
+			<dt># Influencers</dt>
+			<dd>{{cmpStats(cmp, 'infs') | fmtNum }}</dd>
+		</dl>
+	</div>
+	<div class="pallete-item">
+		<dl class="palette palette-wet-asphalt">
+			<dt>Spent</dt>
+			<dd>${{cmpStats(cmp, 'spent').toFixed(2)}}</dd>
+		</dl>
+		<dl class="palette palette-midnight-blue">
+			<dt>Monthly budget</dt>
+			<dd>${{cmp.budget?.toFixed(0)}}</dd>
+		</dl>
 	</div>
 
-	<div class="grid-50 mobile-grid-100" align="left">
-		<h6 style="margin-bottom: 8px;">Delivered content:</h6>
-		<div class="infColumn">
-			<div style="font-size: 12px;" *ngFor="let inf of cmp.completed">
-				<img height="15" [src]="inf.image"><a [href]="inf.profileUrl" target="_blank">{{inf.name}}</a> |
-				 Engagements: {{inf.engagements | fmtNum}} |
-				 <a style="font-size: 12px;" [href]="inf.postUrl" target="_blank">View Post</a>
-			</div>
+</div>
+<div class="clearfix"></div>
+
+<!--2 rows of influencers-->
+<div class="grid-50 mobile-grid-100" align="left">
+	<h6 style="margin-bottom: 8px;">Accepted / Endorsed Influencers:</h6>
+	<div class="infColumn" #infAcc>
+		<div style="font-size: 12px;" *ngFor="let inf of cmp.accepted">
+			<img height="15" [src]="inf.image"><a [href]="inf.profileUrl" target="_blank">{{inf.name}}</a> | Followers: {{inf.followers
+			| fmtNum}}
 		</div>
-		<!--inf column end-->
-		<hr>
-		<a class="btn btn-info btn-micro">View All...</a>
 	</div>
-	<div class="clearfix"></div>
+	<hr>
+	<a class="btn btn-info btn-micro" *ngIf="cmp.accepted?.length > 5">View All...</a>
+</div>
+
+<div class="grid-50 mobile-grid-100" align="left">
+	<h6 style="margin-bottom: 8px;">Delivered content:</h6>
+	<div class="infColumn" #infComp>
+		<div style="font-size: 12px;" *ngFor="let inf of cmp.completed">
+			<img height="15" [src]="inf.image"><a [href]="inf.profileUrl" target="_blank">{{inf.name}}</a> | Engagements: {{inf.engagements
+			| fmtNum}} |
+			<a style="font-size: 12px;" [href]="inf.postUrl" target="_blank">View Post</a>
+		</div>
+	</div>
+	<!--inf column end-->
+	<hr>
+	<a class="btn btn-info btn-micro" (click)="expandInf(infComp)">>View All...</a>
+</div>
+<div class="clearfix"></div>
 
 </div>
 <!--end row tile-->
