--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1002,35 +1002,8 @@ notifications {
 }
 
 /* Css for manage campaigns page */
-.mCampaign .tile p {
-	margin: 0px;
-}
-.mCampaign .tile p .img-comment {
-	font-size: 12px;
-}
-.mCampaign .tile .label {
-	background-color: #04be5b;
-	border-radius: 3px;
-	color:#fff;
-	padding: 4px;
-	font-size: 10px;
-}
-.mCampaign .palette {
-	border-radius: 10px;
-	margin-bottom: 10px;
-}
-.mCampaign .palette dt {
-	font-size: 12px;
-	opacity: 1;
-	/*color:black;*/
-}
-.mCampaign .palette dd {
-	/*color: black;*/
-}
-
 .mCampaign .infColumn {
-	max-height: 85px;
-	overflow: auto;
+	max-height: 85px; overflow: auto;
 }
 
 .mCampaign .infColumn.expanded {
@@ -1043,22 +1016,20 @@ notifications {
 }
 
 .mCampaign .progress-bar {
-	border-radius: 25px;
+	border-radius: 32px;
 	background-color: #34495e;
+	line-height: 8px;
 }
 .mCampaign .progress {
 	background-color: #04be5b;
-	height: 25px;
 	margin-bottom: 6px;
-	border-radius: 25px;
+	border-radius: 32px;
 }
 
 .mCampaign .progress span, .mCampaign .progress + span {
 	color: #fff;
 	display: inline-block;
-	height: 25px;
 	padding: 2px 5px;
-	line-height: 25px;
 }
 
 .mCampaign .stats .pallete-item {
