updated content feed font size problem with a break and did uppercase on stat tiles for manage campaigns

--- a/app/views/contentFeed.html
+++ b/app/views/contentFeed.html
@@ -34,7 +34,7 @@
 				Comments: <span id="counts">{{it.comments || 'N/A'}}</span>
 				Shares: <span id="counts">{{it.shares || 'N/A'}}</span>
 				Link Clicks: <span id="counts">{{it.clicks || 'N/A'}}</span>
-			</small>
+			</small><br>
 			<small style="font-size: 10px;">
 				Published: <span id="counts" style="font-size: 10px;">{{it.published * 1000 | date}}</span>
 				Campaign ID: <span id="counts" style="font-size: 10px;">{{it.campaignID || 'N/A'}}</span>
