--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -65,51 +65,51 @@
 
 	<div class="pallete-item" style="margin-left: 0px;">
 		<dl class="palette palette-wet-asphalt" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
-			<dt style="font-size: 12px; opacity: 1;">Engagements</dt>
+			<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Engagements</dt>
 			<dd>{{cmpStats(cmp, 'engagements') | fmtNum }}</dd>
 		</dl>
 		<dl class="palette palette-midnight-blue" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
-			<dt style="font-size: 12px; opacity: 1;">Est Views</dt>
+			<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Est Views</dt>
 			<dd>{{cmpStats(cmp, 'views') | fmtNum }}</dd>
 		</dl>
 	</div>
 	<div class="pallete-item">
 		<dl class="palette palette-wet-asphalt" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
-			<dt style="font-size: 12px; opacity: 1;">Likes</dt>
+			<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Likes</dt>
 			<dd>{{cmpStats(cmp, 'likes') | fmtNum }}</dd>
 		</dl>
 		<dl class="palette palette-midnight-blue" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
-			<dt style="font-size: 12px; opacity: 1;">Link Clicks</dt>
+			<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Link Clicks</dt>
 			<dd>{{cmpStats(cmp, 'clicks') | fmtNum }}</dd>
 		</dl>
 	</div>
 	<div class="pallete-item">
 		<dl class="palette palette-wet-asphalt" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
-			<dt style="font-size: 12px; opacity: 1;">Comments</dt>
+			<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Comments</dt>
 			<dd>{{cmpStats(cmp, 'comments') | fmtNum }}</dd>
 		</dl>
 		<dl class="palette palette-midnight-blue" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
-			<dt style="font-size: 12px; opacity: 1;">Shares</dt>
+			<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Shares</dt>
 			<dd>{{cmpStats(cmp, 'shares') | fmtNum }}</dd>
 		</dl>
 	</div>
 	<div class="pallete-item">
 		<dl class="palette palette-wet-asphalt" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
-			<dt style="font-size: 12px; opacity: 1;">Sent Perks</dt>
+			<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Sent Perks</dt>
 			<dd>{{cmpStats(cmp, 'perks') | fmtNum }}</dd>
 		</dl>
 		<dl class="palette palette-midnight-blue" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
-			<dt style="font-size: 12px; opacity: 1;"># Influencers</dt>
+			<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;"># Influencers</dt>
 			<dd>{{cmpStats(cmp, 'infs') | fmtNum }}</dd>
 		</dl>
 	</div>
 	<div class="pallete-item">
 		<dl class="palette palette-wet-asphalt" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
-			<dt style="font-size: 12px; opacity: 1;">Spent</dt>
+			<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Spent</dt>
 			<dd>${{cmpStats(cmp, 'spent').toFixed(2)}}</dd>
 		</dl>
 		<dl class="palette palette-midnight-blue" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
-			<dt style="font-size: 12px; opacity: 1;">Monthly budget</dt>
+			<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Monthly budget</dt>
 			<dd>${{cmp.budget?.toFixed(0)}}</dd>
 		</dl>
 	</div>
