visual changes to the reporting and left nav name to dash

--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -36,8 +36,8 @@
 		<div class="cr8-campaign"><a [routerLink]="['/createCampaign', user.id]" class="btn btn-green1">CREATE CAMPAIGN</a></div>
 		<div class="user-account-options">
 			<ul>
+				<li class="li-reporting"><a [routerLink]="['/reporting', user.id]" [routerLinkActive]="['is-active']">Dashboard</a></li>
 				<li class="li-campaign"><a [routerLink]="['/mCampaigns', user.id]" [routerLinkActive]="['is-active']">My Campaigns</a></li>
-				<li class="li-reporting"><a [routerLink]="['/reporting', user.id]" [routerLinkActive]="['is-active']">Reporting</a></li>
 				<li class="li-content"><a [routerLink]="['/contentFeed', user.id]" [routerLinkActive]="['is-active']">My Content</a></li>
 			</ul>
 		</div>
