--- a/app/views/reporting.html
+++ b/app/views/reporting.html
@@ -53,7 +53,7 @@
 
 <br/>
 <br>
-<h2 class="heading">Quick stats for the last 7 days:</h2>
+<h2 class="heading">High-level stats for the last 30 days:</h2>
 
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader">
